--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "autoprefixer": "^10.4.16",
     "ethers": "^6.9.0",
     "hardhat": "^2.19.3",
+    "lucide-react": "^0.468.0",
     "next": "14.0.4",
     "pino-pretty": "^13.0.0",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recharts": "^2.14.1",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3",
     "viem": "^2.0.0",
