--- a/package.json
+++ b/package.json
@@ -1,47 +1,58 @@
 {
-  "dependencies": {
-     "@radix-ui/react-dialog": "^1.0.5",
-     "@radix-ui/react-dropdown-menu": "^2.0.6",
-     "@radix-ui/react-label": "^2.0.2",
-     "@radix-ui/react-select": "^2.0.0",
-     "@radix-ui/react-slot": "^1.0.2",
-     "@radix-ui/react-toast": "^1.1.5",
-     "@rainbow-me/rainbowkit": "^1.3.3",
-     "@tanstack/react-query": "^4.36.1",
-     "class-variance-authority": "^0.7.0",
-     "clsx": "^2.1.0",
-     "date-fns": "^3.0.6",
-     "ethers": "^6.9.1",
-     "lucide-react": "^0.300.0",
-     "next": "14.0.4",
-     "react": "^18.2.0",
-     "react-dom": "^18.2.0",
-     "recharts": "^2.10.3",
-     "tailwind-merge": "^2.2.0",
-     "tailwindcss-animate": "^1.0.7",
-     "viem": "^1.21.4",
-     "wagmi": "^1.4.13"
+  "name": "artist-trading-platform",
+  "version": "1.0.0",
+  "type": "commonjs",
+  "scripts": {
+    "test": "hardhat test",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
- "devDependencies": {
-     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
-     "@nomicfoundation/hardhat-ethers": "^3.0.0",
-     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
-     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
-     "@nomicfoundation/hardhat-verify": "^2.0.0",
-     "@typechain/ethers-v6": "^0.5.1",
-     "@typechain/hardhat": "^9.1.0",
-     "@types/chai": "^4.3.11",
-     "@types/mocha": "^10.0.6",
-     "@types/node": "^20.10.6",
-     "@types/react": "^18.2.46",
-     "@types/react-dom": "^18.2.18",
-     "autoprefixer": "^10.4.16",
-     "chai": "^4.3.10",
-     "hardhat": "^2.19.4",
-     "postcss": "^8.4.32",
-     "tailwindcss": "^3.4.0",
-     "ts-node": "^10.9.2",
-     "typechain": "^8.3.2",
-     "typescript": "^5.3.3"
+  "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@rainbow-me/rainbowkit": "^1.3.3",
+    "@tanstack/react-query": "^4.36.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.0.6",
+    "ethers": "^6.9.1",
+    "lucide-react": "^0.300.0",
+    "next": "14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "recharts": "^2.10.3",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "^1.21.4",
+    "wagmi": "^1.4.13"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@openzeppelin/contracts": "^5.1.0",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
+    "@types/chai": "^4.3.11",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.17.9",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.16",
+    "chai": "^4.3.10",
+    "hardhat": "^2.22.17",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "ts-node": "^10.9.2",
+    "typechain": "^8.3.2",
+    "typescript": "^5.7.2"
   }
- }
+}
