--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.0.6",
+    "dotenv": "^16.4.7",
     "ethers": "^6.9.1",
     "lucide-react": "^0.300.0",
     "next": "14.0.4",
