--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@rainbow-me/rainbowkit": "^1.3.3",
     "@tanstack/react-query": "^4.36.1",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^3.0.6",
     "dotenv": "^16.4.7",
     "ethers": "^6.9.1",
     "lucide-react": "^0.300.0",
     "next": "14.0.4",
+    "next-themes": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.10.3",
-    "tailwind-merge": "^2.2.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^1.21.4",
     "wagmi": "^1.4.13"
@@ -40,6 +41,7 @@
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
     "@openzeppelin/contracts": "^5.1.0",
+    "@shadcn/ui": "^0.0.4",
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
     "@types/chai": "^4.3.11",
