--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
-    "@rainbow-me/rainbowkit": "^1.3.3",
+    "@rainbow-me/rainbowkit": "^1.3.7",
     "@tanstack/react-query": "^4.36.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -26,6 +26,7 @@
     "lucide-react": "^0.300.0",
     "next": "14.0.4",
     "next-themes": "^0.4.4",
+    "pino-pretty": "^13.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.10.3",
