--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^3.0.6",
     "dotenv": "^16.4.7",
     "ethers": "^6.9.1",
+    "lightweight-charts": "^4.2.2",
     "lucide-react": "^0.300.0",
     "next": "14.0.4",
     "next-themes": "^0.4.4",
